# test-agent-python

./: Cargo.toml  can.did  pyproject.toml  t.py
src/: agent.rs  candid.rs  lib.rs  types.rs
src/candid/: decode.rs  def.rs  encode.rs
src/types/: func.rs  int.rs  nat.rs  principal.rs  variant.rs
