[package]
name = "agent-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "agent_py"
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-agent = "0.23.0"
num-bigint = "0.4"
pyo3 = { version = "0.17", features = ["extension-module", "num-bigint"] }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"] }
serde = "1.0.144"
serde_json = "1.0.85"
tokio = "1.9"
